[package]
name = "auth-proxy"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
http = "0.2.5"
http-body = "0.4.4"
hyper-tls = "0.5.0"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
pretty_env_logger = "0.4"
aws-config = "0.3.0"
aws-sig-auth = "0.3.0"
aws-smithy-http = "0.33.1"
aws-types = "0.3.0"