[package]
name = "auth-proxy"
homepage = "https://github.com/alexanderpolson/auth-proxy"
repository  = "https://github.com/alexanderpolson/auth-proxy"
documentation = "https://github.com/alexanderpolson/auth-proxy"
description = "Provides a local server that you can point command-line tools to when those commands require, but don't provide an authentication mechanism. For example, if you want to access a secure S3 bucket via a simple curl command, you wouldn't be able to do so without the request being authenticated in somewhere."
license = "MIT"
version = "0.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.49.0"
aws-sig-auth = "0.49.0"
aws-smithy-http = "0.49.0"
aws-types = "0.49.0"
bytes = "1.1.0"
http = "0.2.5"
http-body = "0.4.4"
hyper-tls = "0.5.0"
hyper = { version = "0.14", features = ["full"] }
pretty_env_logger = "0.4"
regex = "1.5.4"
tokio = { version = "1", features = ["full"] }
yaml-rust = "0.4.5"
